objects/SGR_Plan_Age_Rate_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Fees__c</fullName>
        <label>ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Rate_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Age Rate Header</label>
        <referenceTo>SGR_Plan_Age_Rate_Header__c</referenceTo>
        <relationshipName>SGR_Plan_Rate_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Number__c</fullName>
        <label>Area Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Age__c</fullName>
        <label>From Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Premium__c</fullName>
        <label>Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_TEFRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is TEFRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tobacco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tobacco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_of_ACA__c</fullName>
        <label>Net of ACA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_ACA_Fees__c</fullName>
        <label>Non ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Detail_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plan Detail External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Size__c</fullName>
        <label>Rate Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Code__c</fullName>
        <label>Relationship Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_Plan_Id__c</fullName>
        <label>SGR Plan Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Age__c</fullName>
        <label>To Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SGR Plan Age Rate Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Age_Rate_Header__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARD-{0000000}</displayFormat>
        <label>SGR Plan Rate Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SGR Plan Age Rate Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>